--- a/bookapi/appsettings.json
+++ b/bookapi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SCONN": "Server=SPL;Database=bookDB;User ID=sa;Password=admin@123;Trusted_Connection=False;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
