--- a/bookapp/package.json
+++ b/bookapp/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~7.0.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.5.4",
+    "ng2-order-pipe": "^0.1.5",
+    "ng2-search-filter": "^0.4.7",
     "ngx-bootstrap": "^3.1.4",
     "ngx-chips": "^2.0.0-beta.0",
     "rxjs": "~6.3.3",
