--- a/bookapp/package.json
+++ b/bookapp/package.json
@@ -49,6 +49,10 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "serialize-javascript": ">=3.1.0",
+    "elliptic": ">=6.5.3",
+    "dot-prop": ">=5.1.1",
+    "lodash": ">=4.17.19"
   }
 }
